feat(test): refactor scheduler tests, testing bulkUpdate.